# spider-solitaire

./: .diff.txt  .gitignore  CMakeLists.txt  README.md  imgui.ini
SpiderSolitaire-0.1.0-Darwin/assets/shaders/: vertexShader.glsl
_CPack_Packages/Darwin/ZIP/SpiderSolitaire-0.1.0-Darwin/: SpiderSolitaire
_CPack_Packages/Darwin/ZIP/SpiderSolitaire-0.1.0-Darwin/assets/cards/: Card Space.xcf
_CPack_Packages/Darwin/ZIP/SpiderSolitaire-0.1.0-Darwin/assets/shaders/: fragShader.glsl
assets/: scores.txt
assets/shaders/: fragShader.glsl  vertexShader.glsl
include/: miniaudio.h
include/glad/: glad.h
include/glm/glm/: mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/glm/glm/ext/: matrix_clip_space.hpp  matrix_int2x3_sized.hpp  matrix_int3x2_sized.hpp  matrix_int3x3_sized.hpp  matrix_int4x2_sized.hpp  matrix_int4x4_sized.hpp  matrix_relational.inl  quaternion_common.hpp  quaternion_common.inl  quaternion_geometric.hpp  scalar_ulp.hpp  scalar_ulp.inl  vector_common.hpp  vector_ulp.hpp
src/: card.cpp  card.h  card_drag.cpp  card_drag.h  glad.c  main.cpp  render.cpp  render.h  vectors.h
src/core/: audio.cpp  audio.h  game.cpp  game.h  game_config.h  game_rules.cpp  game_rules.h  layout.cpp  layout.h  move_system.cpp  move_system.h  path.cpp  path.h  persistence.cpp  persistence.h
src/input/: card_drag.cpp  card_drag.h  input_state.h
src/model/: autoState.h  card.cpp  card.h  dealState.h  pile.h
src/render/: cardVertices.h  render.cpp  render.h
src/rules/: game_rules.h  run_rules.cpp  run_rules.h  spider_rules.cpp  spider_rules.h
src/ui/: main_menu.cpp  main_menu.h  pause_menu.cpp  pause_menu.h  style.cpp
